# PersistentSet

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
Allocators/: AdapterAllocator.h  ConditionalAllocator.h  FreeListAllocator.h  HeapAllocator.h  PoolAllocator.h  TwoPoolsAllocator.h
PersistentSet/: PatriciaSet.h  PatriciaTree.h  PatriciaUtil.h
